--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@headlessui/react": "^1.7.14",
+    "@react-google-maps/api": "^2.19.2",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
-    "next": "^13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/aos": "^3.0.4",
+    "@types/google.maps": "^3.54.4",
     "@types/node": "20.8.2",
     "@types/react": "18.2.25",
     "autoprefixer": "^10.4.14",
